--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Header -->
   <header class="bg-green-600 text-white py-4">
     <div class="container mx-auto px-4 flex justify-between items-center">
-      <img src="https://github.com/jdefant/gulfharborspark/blob/main/Logo.png" alt="Gulf Harbors Neighborhood Park Organization Logo" class="h-12 w-auto">
+      <img src="https://raw.githubusercontent.com/jdefant/gulfharborspark/main/logo.png" alt="Gulf Harbors Neighborhood Park Organization Logo" class="h-12 w-auto">
       <nav>
         <a href="#donate" class="bg-yellow-400 text-green-800 px-4 py-2 rounded hover:bg-yellow-500">Donate Now</a>
       </nav>
